fix bug confict db